force-app/main/default/objects/Headcount_Summary__c/Headcount_Summary__c.object-meta.xml
<CustomObject>
    <label>Headcount Summary</label>
    <nameField>
        <displayFormat>HS={000000}</displayFormat>
        <label>Headcount Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Headcount Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>