force-app/main/default/objects/Headcount_Summary__c/fields/Last_Year_Total_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Total_Headcount__c</fullName>
    <label>Last Year Total Headcount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>