force-app/main/default/objects/Headcount_Summary__c/fields/Planned_Incremental_Sales_Hires__c.field-meta.xml
<CustomField>
    <fullName>Planned_Incremental_Sales_Hires__c</fullName>
    <formula>This_Year_End_Estimate__c +  Q1_Planned_Hires__c  +  Q2_Planned_Hires__c +  Q3_Planned_Hires__c +  Q4_Planned_Hires__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Incremental Sales Hires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>