force-app/main/default/objects/Headcount_Summary__c/fields/Q3_Planned_Hires__c.field-meta.xml
<CustomField>
    <fullName>Q3_Planned_Hires__c</fullName>
    <label>Q3 Planned Hires</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>