force-app/main/default/objects/Headcount_Summary__c/fields/Territory_Sales_Master_Data__c.field-meta.xml
<CustomField>
    <fullName>Territory_Sales_Master_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Sales Master Data</label>
    <referenceTo>Territory_Sales_Master_Data__c</referenceTo>
    <relationshipLabel>Headcount Summary</relationshipLabel>
    <relationshipName>Headcount_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>