force-app/main/default/objects/Headcount_Summary__c/fields/This_Year_End_Estimate__c.field-meta.xml
<CustomField>
    <fullName>This_Year_End_Estimate__c</fullName>
    <label>This Year End Estimate</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>