force-app/main/default/objects/Headcount_Summary__c/fields/This_Year_Headcount_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>This_Year_Headcount_Till_Date__c</fullName>
    <label>This Year Headcount Till Date</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>