force-app/main/default/objects/Headcount_Summary__c/fields/Y_2_Headcount_Total__c.field-meta.xml
<CustomField>
    <fullName>Y_2_Headcount_Total__c</fullName>
    <label>Y-2 Headcount Total</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>